@@ -7,6 +7,7 @@ Version 1.0.4
 * Fix lasersight always displaying with revolver and crossbow.
 * Fix incorrect string IDs for item combine, HK and revolver with lasersight.
 * Fix puzzle holes not swapping to puzzle done objects.
+* Fix several collision and sound source issues in flipped rooms.
 
 Version 1.0.3
 =============
